// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`inspect.table { a: 1, b: 2 } 1`] = `
"┌───┬────────┐
│   │ Values │
├───┼────────┤
│ a │ 1      │
│ b │ 2      │
└───┴────────┘
"
`;

exports[`inspect.table { a: 1, b: 2, c: 3 } 1`] = `
"┌───┬────────┐
│   │ Values │
├───┼────────┤
│ a │ 1      │
│ b │ 2      │
│ c │ 3      │
└───┴────────┘
"
`;

exports[`inspect.table { a: 1, b: 2, c: 3, d: 4 } 1`] = `
"┌───┬────────┐
│   │ Values │
├───┼────────┤
│ a │ 1      │
│ b │ 2      │
│ c │ 3      │
│ d │ 4      │
└───┴────────┘
"
`;

exports[`inspect.table Map(2) { "a": 1, "b": 2 } 1`] = `
"┌───┬─────┬────────┐
│   │ Key │ Values │
├───┼─────┼────────┤
│ 0 │ a   │ 1      │
│ 1 │ b   │ 2      │
└───┴─────┴────────┘
"
`;

exports[`inspect.table [ [ "a", 1 ], [ "b", 2 ] ] 1`] = `
"┌───┬───┬───┐
│   │ 0 │ 1 │
├───┼───┼───┤
│ 0 │ a │ 1 │
│ 1 │ b │ 2 │
└───┴───┴───┘
"
`;

exports[`inspect.table Set(3) { 1, 2, 3 } 1`] = `
"┌───┬────────┐
│   │ Values │
├───┼────────┤
│ 0 │ 1      │
│ 1 │ 2      │
│ 2 │ 3      │
└───┴────────┘
"
`;

exports[`inspect.table { "0": 1, "1": 2, "2": 3 } 1`] = `
"┌───┬────────┐
│   │ Values │
├───┼────────┤
│ 0 │ 1      │
│ 1 │ 2      │
│ 2 │ 3      │
└───┴────────┘
"
`;

exports[`inspect.table [ 1, 2, 3 ] 1`] = `
"┌───┬────────┐
│   │ Values │
├───┼────────┤
│ 0 │ 1      │
│ 1 │ 2      │
│ 2 │ 3      │
└───┴────────┘
"
`;

exports[`inspect.table [ "a", 1, "b", 2, "c", 3 ] 1`] = `
"┌───┬────────┐
│   │ Values │
├───┼────────┤
│ 0 │ a      │
│ 1 │ 1      │
│ 2 │ b      │
│ 3 │ 2      │
│ 4 │ c      │
│ 5 │ 3      │
└───┴────────┘
"
`;

exports[`inspect.table [ /a/, 1, /b/, 2, /c/, 3 ] 1`] = `
"┌───┬────────┐
│   │ Values │
├───┼────────┤
│ 0 │        │
│ 1 │ 1      │
│ 2 │        │
│ 3 │ 2      │
│ 4 │        │
│ 5 │ 3      │
└───┴────────┘
"
`;

exports[`inspect.table (ansi) { a: 1, b: 2 } 1`] = `
"┌───┬────────┐
│ [0m[1m [0m │ [0m[1mValues[0m │
├───┼────────┤
│ a │ [0m[33m1[0m      │
│ b │ [0m[33m2[0m      │
└───┴────────┘
"
`;

exports[`inspect.table (ansi) { a: 1, b: 2, c: 3 } 1`] = `
"┌───┬────────┐
│ [0m[1m [0m │ [0m[1mValues[0m │
├───┼────────┤
│ a │ [0m[33m1[0m      │
│ b │ [0m[33m2[0m      │
│ c │ [0m[33m3[0m      │
└───┴────────┘
"
`;

exports[`inspect.table (ansi) { a: 1, b: 2, c: 3, d: 4 } 1`] = `
"┌───┬────────┐
│ [0m[1m [0m │ [0m[1mValues[0m │
├───┼────────┤
│ a │ [0m[33m1[0m      │
│ b │ [0m[33m2[0m      │
│ c │ [0m[33m3[0m      │
│ d │ [0m[33m4[0m      │
└───┴────────┘
"
`;

exports[`inspect.table (ansi) Map(2) { "a": 1, "b": 2 } 1`] = `
"┌───┬─────┬────────┐
│ [0m[1m [0m │ [0m[1mKey[0m │ [0m[1mValues[0m │
├───┼─────┼────────┤
│ 0 │ a   │ [0m[33m1[0m      │
│ 1 │ b   │ [0m[33m2[0m      │
└───┴─────┴────────┘
"
`;

exports[`inspect.table (ansi) [ [ "a", 1 ], [ "b", 2 ] ] 1`] = `
"┌───┬───┬───┐
│ [0m[1m [0m │ [0m[1m0[0m │ [0m[1m1[0m │
├───┼───┼───┤
│ 0 │ a │ [0m[33m1[0m │
│ 1 │ b │ [0m[33m2[0m │
└───┴───┴───┘
"
`;

exports[`inspect.table (ansi) Set(3) { 1, 2, 3 } 1`] = `
"┌───┬────────┐
│ [0m[1m [0m │ [0m[1mValues[0m │
├───┼────────┤
│ 0 │ [0m[33m1[0m      │
│ 1 │ [0m[33m2[0m      │
│ 2 │ [0m[33m3[0m      │
└───┴────────┘
"
`;

exports[`inspect.table (ansi) { "0": 1, "1": 2, "2": 3 } 1`] = `
"┌───┬────────┐
│ [0m[1m [0m │ [0m[1mValues[0m │
├───┼────────┤
│ 0 │ [0m[33m1[0m      │
│ 1 │ [0m[33m2[0m      │
│ 2 │ [0m[33m3[0m      │
└───┴────────┘
"
`;

exports[`inspect.table (ansi) [ 1, 2, 3 ] 1`] = `
"┌───┬────────┐
│ [0m[1m [0m │ [0m[1mValues[0m │
├───┼────────┤
│ 0 │ [0m[33m1[0m      │
│ 1 │ [0m[33m2[0m      │
│ 2 │ [0m[33m3[0m      │
└───┴────────┘
"
`;

exports[`inspect.table (ansi) [ "a", 1, "b", 2, "c", 3 ] 1`] = `
"┌───┬────────┐
│ [0m[1m [0m │ [0m[1mValues[0m │
├───┼────────┤
│ 0 │ a      │
│ 1 │ [0m[33m1[0m      │
│ 2 │ b      │
│ 3 │ [0m[33m2[0m      │
│ 4 │ c      │
│ 5 │ [0m[33m3[0m      │
└───┴────────┘
"
`;

exports[`inspect.table (ansi) [ /a/, 1, /b/, 2, /c/, 3 ] 1`] = `
"┌───┬────────┐
│ [0m[1m [0m │ [0m[1mValues[0m │
├───┼────────┤
│ 0 │        │
│ 1 │ [0m[33m1[0m      │
│ 2 │        │
│ 3 │ [0m[33m2[0m      │
│ 4 │        │
│ 5 │ [0m[33m3[0m      │
└───┴────────┘
"
`;

exports[`inspect.table (with properties) { a: 1, b: 2 } 1`] = `
"┌───┬───┐
│   │ b │
├───┼───┤
│ a │   │
│ b │   │
└───┴───┘
"
`;

exports[`inspect.table (with properties) { a: 1, b: 2 } 2`] = `
"┌───┬───┐
│   │ a │
├───┼───┤
│ a │   │
│ b │   │
└───┴───┘
"
`;

exports[`inspect.table (with properties and colors) { a: 1, b: 2 } 1`] = `
"┌───┬───┐
│ [0m[1m [0m │ [0m[1mb[0m │
├───┼───┤
│ a │   │
│ b │   │
└───┴───┘
"
`;

exports[`inspect.table (with properties and colors) { a: 1, b: 2 } 2`] = `
"┌───┬───┐
│ [0m[1m [0m │ [0m[1ma[0m │
├───┼───┤
│ a │   │
│ b │   │
└───┴───┘
"
`;

exports[`inspect.table (with colors in 2nd position) { a: 1, b: 2 } 1`] = `
"┌───┬────────┐
│ [0m[1m [0m │ [0m[1mValues[0m │
├───┼────────┤
│ a │ [0m[33m1[0m      │
│ b │ [0m[33m2[0m      │
└───┴────────┘
"
`;

exports[`inspect.table (with colors in 2nd position) { a: 1, b: 2 } 2`] = `
"┌───┬────────┐
│ [0m[1m [0m │ [0m[1mValues[0m │
├───┼────────┤
│ a │ [0m[33m1[0m      │
│ b │ [0m[33m2[0m      │
└───┴────────┘
"
`;

exports[`inspect.table [ { a: 1 }, { b: 2 }, { a: 3, c: 4 }, { a: 6, c: 5, d: 7 } ] 1`] = `
"┌───┬───┬───┬───┬───┐
│   │ a │ b │ c │ d │
├───┼───┼───┼───┼───┤
│ 0 │ 1 │   │   │   │
│ 1 │   │ 2 │   │   │
│ 2 │ 3 │   │ 4 │   │
│ 3 │ 6 │   │ 5 │ 7 │
└───┴───┴───┴───┴───┘
"
`;

exports[`inspect.table (ansi) [ { a: 1 }, { b: 2 }, { a: 3, c: 4 }, { a: 6, c: 5, d: 7 } ] 1`] = `
"┌───┬───┬───┬───┬───┐
│ \x1B[0m\x1B[1m \x1B[0m │ \x1B[0m\x1B[1ma\x1B[0m │ \x1B[0m\x1B[1mb\x1B[0m │ \x1B[0m\x1B[1mc\x1B[0m │ \x1B[0m\x1B[1md\x1B[0m │
├───┼───┼───┼───┼───┤
│ 0 │ \x1B[0m\x1B[33m1\x1B[0m │   │   │   │
│ 1 │   │ \x1B[0m\x1B[33m2\x1B[0m │   │   │
│ 2 │ \x1B[0m\x1B[33m3\x1B[0m │   │ \x1B[0m\x1B[33m4\x1B[0m │   │
│ 3 │ \x1B[0m\x1B[33m6\x1B[0m │   │ \x1B[0m\x1B[33m5\x1B[0m │ \x1B[0m\x1B[33m7\x1B[0m │
└───┴───┴───┴───┴───┘
"
`;
